--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "悟空记录",
+  "name": "多花灰度",
   "version": "1.2",
   "manifest_version": 2,
   "author": "bohrzhang",
   "description": "Separate Domains and Parameters and Regroup",
-  "permissions": ["storage", "activeTab", "tabs"],
+  "permissions": ["storage", "activeTab", "tabs", "cookies", "https://*.pingan.com.cn/", "https://cdn.sdb.com.cn/"],
   "browser_action": {
     "default_popup": "src/html/popup.html",
     "default_icon": "images/nokia_suite_mirror.png"
   },
+  "content_scripts": [{"matches": ["*://*/*"],"js": ["./contentScript/dh.js"]}],
   "icons": {
     "16": "images/nokia_suite_mirror.png",
     "32": "images/nokia_suite_mirror.png",
     "48": "images/nokia_suite_mirror.png",
     "128": "images/nokia_suite_mirror.png"
-  },
-  "options_page": "src/html/options.html"
+  }
 }
