--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,34 @@
   "manifest_version": 2,
   "author": "bohrzhang",
   "description": "Separate Domains and Parameters and Regroup",
-  "permissions": ["storage", "activeTab", "tabs", "cookies", "https://*.pingan.com.cn/", "https://cdn.sdb.com.cn/"],
+  "permissions": [
+    "webRequest",
+    "webRequestBlocking",
+    "storage",
+    "activeTab",
+    "tabs",
+    "cookies",
+    "https://*.pingan.com.cn/",
+    "https://*.sdb.com.cn/"
+  ],
   "browser_action": {
     "default_popup": "src/html/popup.html",
     "default_icon": "images/nokia_suite_mirror.png"
   },
-  "content_scripts": [{"matches": ["*://*/*"],"js": ["./contentScript/dh.js"]}],
+  "content_scripts": [
+    {
+      "matches": [
+        "*://*/*"
+      ],
+      "js": [
+        "./contentScript/dh.js"
+      ]
+    }
+  ],
+  "background": {
+    "scripts": ["./background/cdn-huidu.js"],
+    "persistent": true
+  },
   "icons": {
     "16": "images/nokia_suite_mirror.png",
     "32": "images/nokia_suite_mirror.png",
